<resources>
    <string name="app_name">SecretGift</string>
    <string name="menu_home">Home</string>
    <string name="menu_profile">Profile</string>
    <string name="btn_log">INGRESAR</string>
    <string name="btn_event">TENGO CÓDIGO</string>
    <string name="link_create_user"><u>No tengo cuenta</u></string>
    <string name="register">REGISTRAR</string>
    <string name="name">Nombre</string>
    <string name="email">Email</string>
    <string name="password">Contraseña</string>
    <string name="repeat_password">Confirmar contraseña\n</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="terms_and_conditions">Acepto los Términos y Condiciones</string>
    <string name="game_code">INTRODUCE EL CÓDIGO DE LA SALA</string>
    <string name="admob_banner_id">ca-app-pub-3940256099942544~3347511713</string>
    <string name="admob_banner_ad_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="game_player">INTRODUCE LOS DATOS DEL NUEVO JUGADOR</string>
    <string name="add_player">Añadir Participante:</string>
    <string name="game_settings">Opciones de sala</string>
    <string name="game_date">Fecha de evento:</string>
    <string name="players_number">Número de participantes:</string>
    <string name="max_cost">Precio máximo:</string>
    <string name="min_cost">Precio mínimo:</string>
    <string name="game_info">Datos de la sala</string>
    <string name="game_settings_button">AJUSTES DE SALA</string>
    <string name="create_game">CREAR SALA</string>
    <string name="send_email">Enviar email</string>
    <string name="send">Enviar</string>
    <string name="reset_password"><u>Restablecer contraseña</u></string>
    <string name="local_games">Salas en Borrador</string>
    <string name="no_games_message">No hay salas en esta lista</string>
    <string name="api_games_message">Salas Guardadas</string>
    <string name="send_game_button">ENVIAR SALA</string>
    <string name="game_name">Nombre de la Sala:</string>
    <string name="accept_button">Aceptar</string>
    <string name="cancel_button">Cancelar</string>
    <string name="user_details">Detalles del usuario</string>
    <string name="user_name">Nombre:</string>
    <string name="user_email">Correo Electrónico:</string>
    <string name="user_id">ID de Usuario:</string>
    <string name="current_player">Jugador 1</string>
    <string name="linked_to">regalas a:</string>
    <string name="players">PARTICIPANTES</string>
    <string name="max_cost_text">25</string>
    <string name="min_cost_text">5</string>


</resources>