<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_background"
    tools:context=".presentation.login.LoginActivity">

    <ImageView
        android:id="@+id/iv_login"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_marginTop="@dimen/activity_top_margin_logo"
        android:scaleType="centerCrop"
        android:src="@drawable/logo_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_email"
        style="@style/custom_text_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_login">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_email"
            style="@style/custom_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress|textNoSuggestions"
             />


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_password"
        style="@style/custom_text_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:textColorHint="@color/hintColor"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/box_stroke_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_email">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_password"
            style="@style/custom_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>
    <TextView
        ads:layout_constraintTop_toBottomOf="@id/til_password"
        ads:layout_constraintStart_toStartOf="parent"
        style="@style/custom_button"
        android:layout_marginStart="48dp"
        android:id="@+id/tv_reset_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:textSize="16sp"
        android:text="@string/reset_password" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/custom_button"
        android:layout_marginTop="@dimen/activity_top_margin"
        android:text="@string/btn_log"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_password" />

    <TextView
        android:id="@+id/tv_link_create_user"
        style="@style/custom_button"
        android:textSize="16sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="34dp"
        android:text="@string/link_create_user"
        android:textColor="@color/orangecolor"
        app:layout_constraintEnd_toEndOf="parent"
        ads:layout_constraintTop_toBottomOf="@id/btn_login"
        app:layout_constraintStart_toStartOf="parent"
      />

    <Button
        android:id="@+id/btn_event"
        style="@style/custom_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/button_horizontal_margin"
        android:layout_marginTop="56dp"
        android:layout_marginBottom="18dp"
        android:text="@string/btn_event"
        android:textColor="@color/orangecolor"
        ads:layout_constraintBottom_toTopOf="@id/adView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
         />

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_ads_margin"
        ads:adSize="FLUID"
        ads:adUnitId="@string/admob_banner_ad_id"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>